operator/pkg/model/ingestion/testdata/gateway/Conformance/TLSRouteSimpleSameNamespace/input-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  creationTimestamp: null
  name: gateway-tlsroute
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: cilium
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    name: https
    port: 443
    protocol: TLS
    tls:
      mode: Passthrough
status: {}
