operator/pkg/model/ingestion/testdata/gateway/Conformance/TLSRouteSimpleSameNamespace/output-listeners.yaml
- hostname: "*"
  mode: Passthrough
  name: https
  port: 443
  routes:
    - backends:
        - name: tls-backend
          namespace: gateway-conformance-infra
          port:
            port: 443
      hostnames:
        - abc.example.com
  sources:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-tlsroute
      namespace: gateway-conformance-infra
      version: v1
